Responsive menu: items white space fix.

--- a/public_html/themes/custom/eeuem/sources/sass/eeuem/theme/block/_responsive-menu.scss
+++ b/public_html/themes/custom/eeuem/sources/sass/eeuem/theme/block/_responsive-menu.scss
@@ -129,6 +129,7 @@
 
   .menu.sub-nav {
     width: auto;
+    min-width: $spacer * 25;
     max-width: $spacer * 25;
     margin: 0;
     padding: $spacer;
@@ -142,7 +143,7 @@
       overflow: hidden;
       color: palette-color('text', 'alternative');
       text-transform: uppercase;
-      white-space: nowrap;
+      //white-space: nowrap;
 
       &:hover, &:active, &:hover:active, &:visited {
         color: palette-color('text', 'alternative');
